# confshelf

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  confshelf.c  confshelf.nimble  confshelf.nims  recipe.toml  setup.nims
c-lang/: .gitignore  README.md
nim-lang/confshelf/: .gitignore  README.md
nim-lang/confshelf/src/: confshelf.nim  nimblefile.nim
src/: apppaths.nim  confshelf.nim  knownlinks.nim  main.rs  nimblefile.nim
