[package]
name = "confshelf"
version = "0.1.0"
authors = ["shirokuro <46kuro212@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serial_test = "0.5" # For run tests in single thread.
